# computer-science

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md
algorithms/dfs-and-bfs/: dfs.py
algorithms/searching/: binary-search.c  jump-search.c  linear-search.c
algorithms/sorting/: bubble-sort.c  merge-sort.c  quick-sort.c  selection-sort.c
algorithms/strings/: reverse-string.c
data-structures/graph/: graph-adjlist.c  graph-adjmatrix.c
data-structures/hashtable/: hashtable.c
data-structures/linked-list/: singly-linked-list.c
data-structures/queue/: queue.c
data-structures/stack/: stack.c
data-structures/tree/: binary-search-tree.c
include/: bsearch.h  bst.h  isort.h  queue.h  singlyll.h  ssort.h  stack.h  types.h  utils.h
include/algorithms/: bsort.h  hsort.h  jsearch.h  lsearch.h  msort.h  qsort.h  rstr.h  stoi.h
include/ds/: cqueue.h  dyrray.h  graphl.h  graphm.h  hash.h  maxheap.h  pqueue.h  queue.h  singlyll.h  stack.h
lib/: utils.c
src/algorithms/dfs-and-bfs/: bfs.py
src/algorithms/numbers/: stoi.c
src/algorithms/searching/: binary-search.c  jump-search.c  linear-search.c
src/algorithms/sorting/: bubble-sort.c  heap-sort.c  insertion-sort.c  merge-sort.c  quick-sort.c  selection-sort.c
tests/: test-bsearch.c  test-bsort.c  test-bst.c  test-cqueue.c  test-dyrray.c  test-graphl.c  test-graphm.c  test-hash.c  test-hsort.c  test-isort.c  test-jsearch.c  test-lsearch.c  test-maxheap.c  test-msort.c  test-pqueue.c  test-qsort.c  test-queue.c  test-rstr.c  test-singlyll.c  test-ssort.c  test-stack.c  test-stoi.c
(+14 files in other folders)
